[package]
name = "embedded-hdc1080-rs"
version = "0.1.0"
repository = "https://github.com/maxmarvil/hdc1080-embedded-rs"
license = "MIT OR Apache-2.0"
description = "Rust driver for the HDC1080 low-power humidity and temperature digital sensor."
readme = "README.md"
keywords = ["humidity", "temperature", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/maxmarvil/hdc1080-embedded-rs"
documentation = "https://docs.rs/embedded-hdc1080-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"